@@ -7,3 +7,6 @@
 [submodule "zstd"]
 	path = zstd
 	url = https://github.com/facebook/zstd.git
+[submodule "brotli"]
+	path = brotli
+	url = https://github.com/google/brotli.git
