@@ -118,6 +118,7 @@ AC_ARG_ENABLE(internal-debug,  [  --enable-internal-debug   Enable internal debu
 AC_ARG_ENABLE(bz2,             [  --enable-bz2              Use bz2 compression. Defaults to false],                USEBZ2=${enableval},           USEBZ2=no)
 AC_ARG_ENABLE(lzma,            [  --disable-lzma            Use lzma compression. Defaults to true],                USELZMA=${enableval},          USELZMA=yes)
 AC_ARG_ENABLE(zstd,            [  --enable-zstd             Use zstd compression. Defaults to false],               USEZSTD=${enableval},          USEZSTD=no)
+AC_ARG_ENABLE(brotli,          [  --enable-brotli           Use brotli compression. Defaults to false],             USEBROTLI=${enableval},        USEBROTLI=no)
 AC_ARG_ENABLE(tcl-fallback,    [  --enable-tcl-fallback     Install Tcl scripts if load fails. Defaults to false],  USEFALLBACK=${enableval},      USEFALLBACK=no)
 AC_ARG_ENABLE(c-pages,         [  --disable-c-pages         Use pages handling written in C. Defaults to true],     USECPAGES=${enableval},        USECPAGES=yes)
 AC_ARG_ENABLE(c-fsindex,       [  --disable-c-fsindex       Use index handling written in C. Defaults to true],     USECFSINDEX=${enableval},      USECFSINDEX=yes)
@@ -230,11 +231,60 @@ if test ${USECPAGES} = yes; then
         COOKFS_PKGCONFIG_USEZSTD=0
     fi
 
+    if test ${USEBROTLI} = yes; then
+        TEA_ADD_INCLUDES([-I\"`${CYGPATH} ${srcdir}/brotli/c/include`\"])
+        TEA_ADD_SOURCES([pagesComprBrotli.c])
+        TEA_ADD_SOURCES([
+            brotli/c/common/constants.c
+            brotli/c/common/platform.c
+            brotli/c/common/context.c
+            brotli/c/common/transform.c
+            brotli/c/common/shared_dictionary.c
+            brotli/c/common/dictionary.c
+        ])
+        TEA_ADD_SOURCES([
+            brotli/c/enc/encode.c
+            brotli/c/enc/memory.c
+            brotli/c/enc/fast_log.c
+            brotli/c/enc/utf8_util.c
+            brotli/c/enc/brotli_bit_stream.c
+            brotli/c/enc/block_splitter.c
+            brotli/c/enc/metablock.c
+            brotli/c/enc/encoder_dict.c
+            brotli/c/enc/compress_fragment.c
+            brotli/c/enc/compress_fragment_two_pass.c
+            brotli/c/enc/backward_references_hq.c
+            brotli/c/enc/backward_references.c
+            brotli/c/enc/entropy_encode.c
+            brotli/c/enc/command.c
+            brotli/c/enc/static_dict.c
+            brotli/c/enc/literal_cost.c
+            brotli/c/enc/bit_cost.c
+            brotli/c/enc/histogram.c
+            brotli/c/enc/compound_dictionary.c
+            brotli/c/enc/dictionary_hash.c
+            brotli/c/enc/cluster.c
+        ])
+        # This is a hack to build huffman.o because of a conflict between
+        # the huffman.c files from the bzip2 and brotli sources.
+        PKG_OBJECTS="$PKG_OBJECTS brotli_huffman.${OBJEXT}"
+        TEA_ADD_SOURCES([
+            brotli/c/dec/decode.c
+            brotli/c/dec/bit_reader.c
+            brotli/c/dec/state.c
+        ])
+        AC_DEFINE(COOKFS_USEBROTLI)
+        COOKFS_PKGCONFIG_USEBROTLI=1
+    else
+        COOKFS_PKGCONFIG_USEBROTLI=0
+    fi
+
 else
     COOKFS_PKGCONFIG_USECPAGES=0
     COOKFS_PKGCONFIG_FEATURE_ASIDE=0
     COOKFS_PKGCONFIG_USELZMA=0
     COOKFS_PKGCONFIG_USEZSTD=0
+    COOKFS_PKGCONFIG_USEBROTLI=0
 
     # Tcl implementation offers bzip2 compression only with Trf package
     COOKFS_PKGCONFIG_USEBZ2=0
@@ -323,6 +373,7 @@ AC_SUBST(COOKFS_PKGCONFIG_USECWRITERCHAN)
 AC_SUBST(COOKFS_PKGCONFIG_USEBZ2)
 AC_SUBST(COOKFS_PKGCONFIG_USELZMA)
 AC_SUBST(COOKFS_PKGCONFIG_USEZSTD)
+AC_SUBST(COOKFS_PKGCONFIG_USEBROTLI)
 AC_SUBST(COOKFS_PKGCONFIG_USECFSINDEX)
 AC_SUBST(COOKFS_PKGCONFIG_FEATURE_METADATA)
 AC_SUBST(COOKFS_PKGCONFIG_USECVFS)
@@ -339,6 +390,7 @@ if test ${USECPKGCONFIG} = yes; then
     AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USEBZ2, $COOKFS_PKGCONFIG_USEBZ2)
     AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USELZMA, $COOKFS_PKGCONFIG_USELZMA)
     AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USEZSTD, $COOKFS_PKGCONFIG_USEZSTD)
+    AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USEBROTLI, $COOKFS_PKGCONFIG_USEBROTLI)
     AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USECFSINDEX, $COOKFS_PKGCONFIG_USECFSINDEX)
     AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_FEATURE_METADATA, $COOKFS_PKGCONFIG_FEATURE_METADATA)
     AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USECVFS, $COOKFS_PKGCONFIG_USECVFS)
